- Change several confirmation dialogs to default to the No button (Graham)
- Add a new startup parameter "-errors" analogous to "-properties" to specify the error file (Graham)
- Give error message on an attempt to save to a read-only file (Graham)
- Make Fixed Data only concern bits not set by any Setting (Graham)

Changes for v2.02
-- Alpha --
- Fix bug that prevented fixed data being tested on download (Graham)
- Prevent ArrayIndexOutOfBoundsException when loading a .rmir file containing a device upgrade with missing protocol code (Graham)
- Fix bug that has prevented raw download from working since highlighting was added (Graham)
- Show upload/download message in status bar during uploads, normal and raw downloads, and initializations to 00 or FF (Graham)
-- Alpha 2
- Change format of timing displays in Learned Signal Advanced Details to allow pasting as a timing list into IRScope (Graham)
- In decoding a learned signal, if a burst index is out of range, treat as zero duration but put error message in Misc column (Graham)
- Fix bug in recognising keycode key moves when AdvCodeFormat = EFC (Graham)
-- Alpha 3 --
- Enhancements to upload/download/memory initializations status
- Upgrade to jp1usb.dll v0.031
- Fix incorrect inclusion of protocol code in exported binary files
-- Alpha 4 --
- Save changes to General Notes
-- Alpha 5 --
- When Highlighting is active, show as text in the Color column the number of bytes used by that item (Graham)
-- Alpha 6 --
- Implemented disassembler in Manual Settings dialog (Graham)
-- Alpha 7
- Made code of built-in protocols visible in Manual Settings dialog, so that all protocols can be disassembled. (Graham)
- Minor refinements to disassembler to handle certain error situations (Graham)
- Corrected an error in protocols.ini, in that HCS08 code for NEC1 (pid 005A) had final byte E8 missing. (Graham)
-- Alpha 8