@@ -84,6 +84,8 @@ Changes for v2.03
 - Add a new startup parameter "-errors" analogous to "-properties" to specify the error file (Graham)
 - Give error message on an attempt to save to a read-only file (Graham)
 - Make Fixed Data only concern bits not set by any Setting (Graham)
+- Support upgrades with keymoves for Input Raw of Device Upgrade Editor (Graham)
+- Remove the Set Baseline button of Raw Download panel as it serves no purpose (Graham)
 
 Changes for v2.02
 -- Alpha --
